<resources>
    <string name="app_name">Tips</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="amount">Amount</string>
    <string name="pct15">15%</string>
    <string name="pct18">18%</string>
    <string name="custom_pct">Custom %</string>
    <string name="tip_amount">Tip</string>
    <string name="total_amount">Total</string>
</resources>
