<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainGridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:columnCount="2"
    android:useDefaultMargins="true"
    android:orientation="horizontal"
    tools:context=".activities.TipsMainActivity"
    >

    <TextView
        android:id="@+id/txtViewAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editTxtAmount"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_row="0"
        android:layout_column="0"
    />

    <EditText
        android:id="@+id/editTxtAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtViewTipPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/seekBarTipPercentage"
        android:text="@string/custom_pct"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right" />

    <SeekBar
        android:id="@+id/seekBarTipPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:max="30"
        android:progress="18" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:layout_column="1" >

        <TextView
            android:id="@+id/txtViewPct15Label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pct15"
            android:textAppearance="?android:attr/textAppearanceMedium"
        />

        <TextView
            android:id="@+id/txtViewPctCustomLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pct18"
            android:textAppearance="?android:attr/textAppearanceMedium"
        />

    </LinearLayout>

    <TextView
        android:id="@+id/txtViewTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_amount"
        android:layout_row="3"
        android:layout_column="0"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center_vertical" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:layout_column="1">

        <TextView
            android:id="@+id/txtViewPct15Tip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/textview_padding"
            android:background="@android:color/holo_orange_light"
            android:layout_marginRight="@dimen/textview_margin" />

        <TextView
            android:id="@+id/txtViewPctCustomTip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/textview_padding"
            android:background="@android:color/holo_orange_light" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtViewTipTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_amount"
        android:layout_row="4"
        android:layout_column="0"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center_vertical" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4"
        android:layout_column="1">

        <TextView
            android:id="@+id/txtViewPct15Total"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding"
            android:gravity="center"
            android:layout_marginRight="@dimen/textview_margin" />

        <TextView
            android:id="@+id/txtViewPctCustomTotal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/textview_padding"
            android:gravity="center" />

    </LinearLayout>

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_row="5"
        android:layout_column="0" />

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_row="6"
        android:layout_column="1" />

</GridLayout >
